# unreal_dataset_creation

./: .env.example  .gitignore  README.md  get_cube_location.py  get_viewport_camera.py  plan_01312026.md  pyproject.toml  requirements.txt  step1_setup_scene.py  step2_take_screenshot.py  unreal_api_server_v2.py
assets/: house_with_materials.json  simple_house.json
plan/: 02082026_floor_wall_materials.md  02082026_unreal_mcp_server.md  02112026_unreal_mcp_server.md
plans/: plan_02012026.md
progress/: 02032026_multi_object_scene.md  02072026_house_floor_plan.md  02082026_material_support.md  02132026_furniture_addition.md  02142026_code_reorganization.md  plan_02022026.md
scripts/: start_server.py
skills/: wrap_up.md
src/unreal_dataset/: __init__.py  __main__.py
src/unreal_dataset/cli/: __init__.py  main.py
src/unreal_dataset/client/: __init__.py  api_client.py  capture.py  scene_setup.py
src/unreal_dataset/config/: __init__.py  settings.py
src/unreal_dataset/labeling/: __init__.py  class_definitions.py  generator.py  transforms.py
src/unreal_dataset/server/: __init__.py  api_server.py  handlers.py  scene_manager.py
src/unreal_dataset/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_transforms.py
